# py-resume

./: .gitignore  .pre-commit-config.yaml  AI_AGENTS.md  Justfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
input/: resume.yaml
resume_generator/: __init__.py  agent.py  archive.py  assets.py  generator.py  loader.py  models.py  pdf.py
resume_generator/static/: paper.css  styles.css
resume_generator/templates/: resume.html
resume_generator/templates/components/: about.html  education.html  experience.html  header.html  hobbies.html  languages.html  portfolio.html  skills.html  summary.html
tests/: conftest.py  test_agent.py  test_cli.py  test_generator.py  test_loader.py  test_pdf.py
tests/data/: resume.json  resume.yaml
